- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
- SCM/source evidence adapter extraction deepened:
- Deterministic repo counters now include tree entry count, branch/tag ref counts, detached HEAD indicator, and working-tree entry count.
- SCM adapter now emits deterministic worktree state evidence (staged/unstaged/untracked counts) and `SCM_WORKTREE_DIRTY` when local repo state is dirty.
- SCM fallback hardening:
- When `git` commands are unavailable/failing, adapter now parses native `.git` reference material (`HEAD`, loose refs, packed-refs) deterministically for source evidence.
- Image adapter extraction deepened:
- Deterministic header evidence now includes ISO PVD, VHD footer, VHDX signature, QCOW2 magic/version, and VMDK descriptor/sparse-magic hints.
- Package/installer signing evidence deepened:
- Deterministic local signing hints now include PE cert-table presence for `.exe` and signature-entry hints for `.msix/.nupkg/.whl/.jar`.
- New package reason code support: `PACKAGE_SIGNING_INFO_PRESENT` alongside existing unavailable paths.
- Container scan now emits adapter metadata/signals plus adapter artifacts using the same deterministic contract as safe-run adapters.
- Container scan evidence remains local-only inspect data and excludes unstable fields (timestamps/raw env/path values).
- Wave coverage now includes:
- Wave 1: archives, packages/installers, extensions
- Wave 2 baseline: IaC/CICD and document risk signal extraction
- Wave 3 baseline: container/source/signature/image evidence lanes
- Core/runtime trust hardening sweep applied in release scope (digest/trust/runtime path updates, host verification flow updates, and aligned fixture/contract updates).